Add project endpoints